[gd_scene load_steps=5 format=2]

[ext_resource path="res://Utilities/UI/Displays/DisplayPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://Utilities/UI/Options/OptionsPanel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Database/Menu/DatabaseMenu.gd" type="Script" id=3]
[ext_resource path="res://Utilities/UI/Options/NavTabs.tscn" type="PackedScene" id=4]

[node name="DatabaseMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="Panel" parent="."]
margin_right = 924.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 924.0
margin_bottom = 500.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="VBoxContainer"]
margin_right = 924.0
margin_bottom = 20.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05

[node name="NavTabs" parent="VBoxContainer" instance=ExtResource( 4 )]
margin_bottom = 54.0
alignment = 1

[node name="OptionPanel" parent="VBoxContainer" instance=ExtResource( 2 )]
margin_top = 64.0
margin_right = 924.0
margin_bottom = 78.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 88.0
margin_right = 924.0
margin_bottom = 500.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DisplayPanel" parent="VBoxContainer/HBoxContainer" instance=ExtResource( 1 )]
margin_top = 0.0
margin_right = 869.0
margin_bottom = 412.0

[node name="InteractionPanel" type="PanelContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 873.0
margin_right = 924.0
margin_bottom = 412.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer/InteractionPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 44.0
margin_bottom = 405.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="VBoxContainer/HBoxContainer/InteractionPanel/VBoxContainer"]
margin_right = 37.0
margin_bottom = 20.0
text = "Add"

[node name="Tree" type="Tree" parent="VBoxContainer/HBoxContainer/InteractionPanel/VBoxContainer"]
margin_top = 24.0
margin_right = 37.0
margin_bottom = 25.0
[connection signal="tab_changed" from="VBoxContainer/NavTabs" to="." method="_on_NavTabs_tab_changed"]
[connection signal="filter_changed" from="VBoxContainer/OptionPanel" to="." method="_on_OptionPanel_filter_changed"]
